// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DBDataSource createColumnLoader is able to load many items 1`] = `
Array [
  Object {
    "code": "abc",
    "id": 1,
    "name": "aaa",
  },
  Object {
    "code": "def",
    "id": 2,
    "name": "bbb",
  },
  Object {
    "code": "ghi",
    "id": 3,
    "name": "Aaa",
  },
]
`;

exports[`DBDataSource createColumnLoader returns the first matching result 1`] = `
Object {
  "code": "abc",
  "id": 1,
  "name": "aaa",
}
`;

exports[`DBDataSource createColumnLoaderCI is able to load many items 1`] = `
Array [
  Object {
    "code": "abc",
    "id": 1,
    "name": "aaa",
  },
  Object {
    "code": "def",
    "id": 2,
    "name": "bbb",
  },
]
`;

exports[`DBDataSource createColumnLoaderCI returns the first matching result 1`] = `
Object {
  "code": "abc",
  "id": 1,
  "name": "aaa",
}
`;

exports[`DBDataSource createColumnMultiLoader gets all matching results 1`] = `
Array [
  Object {
    "code": "abc",
    "id": 1,
    "name": "aaa",
  },
  Object {
    "code": "abc",
    "id": 7,
    "name": "AAA",
  },
]
`;

exports[`DBDataSource createColumnMultiLoader is able to load many sets of items 1`] = `
Array [
  Array [
    Object {
      "code": "abc",
      "id": 1,
      "name": "aaa",
    },
    Object {
      "code": "abc",
      "id": 7,
      "name": "AAA",
    },
  ],
  Array [
    Object {
      "code": "def",
      "id": 2,
      "name": "bbb",
    },
    Object {
      "code": "def",
      "id": 8,
      "name": "BBB",
    },
  ],
]
`;

exports[`DBDataSource createColumnMultiLoaderCI gets all matching results 1`] = `
Array [
  Object {
    "code": "abc",
    "id": 1,
    "name": "aaa",
  },
  Object {
    "code": "ghi",
    "id": 3,
    "name": "Aaa",
  },
  Object {
    "code": "DEF",
    "id": 5,
    "name": "AAa",
  },
  Object {
    "code": "abc",
    "id": 7,
    "name": "AAA",
  },
]
`;

exports[`DBDataSource createColumnMultiLoaderCI is able to load many sets of items 1`] = `
Array [
  Array [
    Object {
      "code": "abc",
      "id": 1,
      "name": "aaa",
    },
    Object {
      "code": "ghi",
      "id": 3,
      "name": "Aaa",
    },
    Object {
      "code": "DEF",
      "id": 5,
      "name": "AAa",
    },
    Object {
      "code": "abc",
      "id": 7,
      "name": "AAA",
    },
  ],
  Array [
    Object {
      "code": "def",
      "id": 2,
      "name": "bbb",
    },
    Object {
      "code": "ABC",
      "id": 4,
      "name": "Bbb",
    },
    Object {
      "code": "GHI",
      "id": 6,
      "name": "BBb",
    },
    Object {
      "code": "def",
      "id": 8,
      "name": "BBB",
    },
  ],
]
`;

exports[`DBDataSource defaultOptions uses the default options 1`] = `
Object {
  "sql": "
      SELECT *
      FROM \\"any_table\\"
      
      
      ORDER BY \\"any_table\\".\\"id\\"
      
    ",
  "type": "SLONIK_TOKEN_SQL",
  "values": Array [],
}
`;
